--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,49 @@
 /*  your css code here. If applicable */
+#main_container{
+	width : 100%;
+	height : 100%;
+	border: 2px solid black;
+	display : flex;
+	justify-content : center;
+	align-items : center;
+	flex-direction: column;
+	padding: 10px;
+	
+}
+
+#input_container{
+	display: flex;
+	justify-content: center;
+	align-items : center;
+	gap: 20px;
+}
+
+#block_id{
+	width: 150px;
+	height: 20px;
+}
+
+#colour_id{
+	width: 150px;
+	height: 30px;
+	outline: none;
+}
+#grid_container {
+    width: 500px;
+    height: 500px;
+    border: 2px solid black;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);  
+    grid-template-rows: repeat(3, 1fr);     
+    gap: 10px;              
+    margin: 20px;
+    padding: 10px;          
+}
+
+.grid-item{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: 2px solid black;
+	background-color: transparent;
+}
