--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 /*  your css code here. If applicable */
-#main_container{
+#main-container{
 	width : 100%;
 	height : 100%;
 	border: 2px solid black;
@@ -28,7 +28,7 @@
 	height: 30px;
 	outline: none;
 }
-#grid_container {
+#grid-container {
     width: 500px;
     height: 500px;
     border: 2px solid black;
